# SIH_BACKEND/router/attractionRoute.js
@@ -13,5 +13,6 @@ router.get('/fetchByCategory',controller.attractionByCategory);
 router.get('/fetchAll',validateToken,controller.attractionAllFetch);
 router.post('/updateAttraction',validateToken,controller.updateAttraction);
 router.post('/deleteAttraction',validateToken,controller.deleteAttraction);
+router.post('/createOtherAttraction',controller.createOtherAttraction);
 
 module.exports = router;
